added basic quiz setup

--- a/test.html
+++ b/test.html
@@ -9,46 +9,49 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/test.css">
 
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-<header class="header" id="header">
-  <h1 class="title">
-    <a class="title_link" href="index.html">Przewodnik po alkoholach</a>
-  </h1>
-  <nav class="navbar">
-    <div class="navlink_wrapper">
-      <a class="navlink" href="piwo.html">Piwo</a>
-    </div>
-    <div class="navlink_wrapper">
-      <a class="navlink" href="wodka.html">Wódka</a>
-    </div>
-    <div class="navlink_wrapper">
-      <a class="navlink" href="test.html">Test na smakosza</a>
-    </div>
-  </nav>
-</header>
-<div class="content" id="content">
-</div>
-<script src="js/main.js"></script>
-<footer class="footer">
-  <div class="contact_wrapper">
-    <p class="contact_item">Kontakt:</p>
-    <p class="contact_item">e-mail:
-      <a href="mailto:mtomaszewski@student.agh.edu.pl">mtomaszewski@student.agh.edu.pl</a> </p>
+  <header class="header" id="header">
+    <h1 class="title">
+      <a class="title_link" href="index.html">Przewodnik po alkoholach</a>
+    </h1>
+    <nav class="navbar">
+      <div class="navlink_wrapper">
+        <a class="navlink" href="piwo.html">Piwo</a>
+      </div>
+      <div class="navlink_wrapper">
+        <a class="navlink" href="wodka.html">Wódka</a>
+      </div>
+      <div class="navlink_wrapper">
+        <a class="navlink" href="test.html">Test na smakosza</a>
+      </div>
+    </nav>
+  </header>
+  <div class="content" id="content">
+    <div class="quiz" id="quiz"></div>
+    <div class="quiz_results" id="quiz_results"></div>
+    <script src="js/quiz.js"></script>
   </div>
-  <div class="info_wrapper">
-    <p class="info_item">
-      Copyright© 2023 Michał Tomaszewski<br>
-      All rights reserved
-    </p>
-  </div>
+  <script src="js/main.js"></script>
+  <footer class="footer">
+    <div class="contact_wrapper">
+      <p class="contact_item">Kontakt:</p>
+      <p class="contact_item">e-mail:
+        <a href="mailto:mtomaszewski@student.agh.edu.pl">mtomaszewski@student.agh.edu.pl</a> </p>
+    </div>
+    <div class="info_wrapper">
+      <p class="info_item">
+        Copyright© 2023 Michał Tomaszewski<br>
+        All rights reserved
+      </p>
+    </div>
 
-</footer>
+  </footer>
 
 </body>
 
