added content to pages

--- a/piwo.html
+++ b/piwo.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Przewodnik po alkoholach</title>
+  <title>Przewodnik po Alkoholach - Piwo</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/piwo.css">
+<!--  <link rel="stylesheet" href="css/piwo.css">-->
 
 
   <meta name="theme-color" content="#fafafa">
@@ -18,7 +18,7 @@
 <body>
   <header class="header" id="header">
     <h1 class="title">
-      <a class="title_link" href="index.html">Przewodnik po alkoholach</a>
+      <a class="title_link" href="index.html">Przewodnik po Alkoholach</a>
     </h1>
     <nav class="navbar">
       <div class="navlink_wrapper">
@@ -39,6 +39,69 @@
   </div>
   <script src="js/soundcontrol.js"></script>
   <div class="content" id="content">
+    <h2 class="content_paragraph">Piwo!</h2>
+    <p class="content_paragraph">
+      Piwo – napój alkoholowy otrzymywany w wyniku fermentacji alkoholowej
+      brzeczki piwnej. Brzeczka stanowi wodny wyciąg ze słodu browarnego
+      z dodatkiem chmielu i ewentualnie innych surowców. W szerokim znaczeniu,
+      zwłaszcza historycznym, piwem określa się napój fermentowany oparty na
+      zbożowym surowcu. Piwo to najstarszy i najczęściej spożywany napój
+      alkoholowy oraz trzeci pod względem popularności po wodzie i herbacie
+      napój na świecie.
+    </p>
+    <img src="img/piwo.jpg" alt="" class="floating_right">
+    <p class="content_paragraph">
+      Produkcja piwa najczęściej przebiega następująco:
+    <ol class="content_paragraph">
+      <li>
+        rozdrobniony słód (zwykle jęczmienny) miesza się z ciepłą wodą,
+        czasem z dodatkiem innych surowców skrobiowych i enzymów
+      </li>
+      <li>
+        uzyskany ekstrakt (brzeczka) wraz z chmielem poddawany jest gotowaniu
+      </li>
+      <li>
+        ciecz jest klarowana i schładzana
+      </li>
+      <li>
+        dodane drożdże piwowarskie powodują fermentację
+      </li>
+      <li>
+        powstałe piwo zazwyczaj filtruje się i podaje jako napój musujący
+        z uwalniającymi się pęcherzykami dwutlenku węgla tworzącymi pianę
+      </li>
+    </ol>
+    <p class="content_paragraph">
+      Na charakterystyczne cechy sensoryczne piwa składają się substancje
+      pochodzenia zbożowego, aromat i goryczka chmielowa, alkohol i dwutlenek
+      węgla. Istotnym parametrem piwa jest zawartość ekstraktu przed fermentacją
+      złożonego głównie z cukrów (ulegających przemianom biochemicznym do alkoholu)
+      i dekstryn, a także ze związków azotowych i soli mineralnych. Zwykle
+      zawartość ekstraktu wyrażana jest w stopniach Plato. Najpopularniejsze
+      piwa, jasne lagery, zawierają przeciętnie ponad 90% wody i ok. 5% alkoholu
+      objętościowo, ale wartości te mogą odbiegać w zależności od stylu piwa.
+      Drożdże piwne w procesie fermentacji pozwalają uzyskać do kilkunastu procent
+      alkoholu obj., ale w wyniku wymrażania wody jego zawartość można zwiększyć
+      nawet do ponad 60%. Z drugiej strony przy użyciu odpowiedniej technologii
+      produkcji można uzyskać piwo bezalkoholowe, zawierające poniżej 0,5% alkoholu
+      obj.
+    </p>
+    <p class="content_paragraph">
+      Do piwa w szerokim znaczeniu można zaliczyć podpiwek, jak również kwas
+      chlebowy z Europy Wschodniej (wytwarzany poprzez fermentację chleba),
+      tak zwane wina ryżowe (np. japońskie sake, chińskie huangjiu, koreańskie
+      cheongju), mętne, fermentujące piwa afrykańskie z prosa, sorga, kukurydzy
+      określane jako opaque beer, wiele fermentowanych napojów z Ameryki Środkowej
+      i Południowej jak chicha z kukurydzy.
+    </p>
+    <p class="content_paragraph">
+      Wyraz piwo wywodzi się z prasłowiańskiego słowa pivo oznaczającego napitek,
+      napój[15]. Podobnie jest w wielu językach słowiańskich: białoruski: піва,
+      bośniacki, chorwacki, czeski, słowacki, słoweński: pivo, macedoński,
+      rosyjski, ukraiński: пиво. Prasłowiański wyraz *pivo utworzony został
+      od prasłowiańskiego czasownika *piti, czyli pić (z indoeuropejskiego
+      *pō(i)-: *pī-) z dodatkiem przyrostka -vo.
+    </p>
   </div>
   <script src="js/main.js"></script>
   <footer class="footer">
