--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Przewodnik po alkoholach</title>
+  <title>Przewodnik po Alkoholach - Test na smakosza</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +18,7 @@
 <body>
   <header class="header" id="header">
     <h1 class="title">
-      <a class="title_link" href="index.html">Przewodnik po alkoholach</a>
+      <a class="title_link" href="index.html">Przewodnik po Alkoholach</a>
     </h1>
     <nav class="navbar">
       <div class="navlink_wrapper">
@@ -33,8 +33,8 @@
     </nav>
   </header>
   <div class="content" id="content">
-    <div class="quiz" id="quiz"></div>
-    <div class="quiz_results" id="quiz_results"></div>
+    <div class="quiz content_paragraph" id="quiz"></div>
+    <div class="quiz_results content_paragraph" id="quiz_results"></div>
     <script src="js/quiz.js"></script>
   </div>
   <script src="js/main.js"></script>
