--- a/wodka.html
+++ b/wodka.html
@@ -33,7 +33,7 @@
     </nav>
   </header>
   <div class="mute_wrapper">
-    <button class="mute_button" id="mute_button" onclick="play_pause()">
+    <button class="mute_button" id="mute_button" onclick="playPause()">
       <img class="mute_icon" id="mute_icon" src="img/playing_icon.svg" alt="mute/unmute button">
     </button>
   </div>
